# zero2prod

./: Cargo.toml  Dockerfile
.github/workflows/: audit.yml  general.yml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check_test.rs
