[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Zuhaib Ul Zamann <zuhaibulzaman.786@gmail.com>"]

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
config = "0.15.19"


[dependencies.sqlx]
version = "0.8.1"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[lib]
path = "src/lib.rs"
[dev-dependencies]
reqwest = "0.11"
