[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Zuhaib Ul Zamann <zuhaibulzaman.786@gmail.com>"]

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
config = "0.15.19"
chrono = "0.4.42"
uuid = { version = "1.19.0", features = ["v4"] }
log = "0.4.29"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"


[dependencies.sqlx]
version = "0.8.1"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[lib]
path = "src/lib.rs"
[dev-dependencies]
reqwest = "0.11"
once_cell = "1.21.3"
